--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <button class="category-btn" data-category="history">History</button>
                     <button class="category-btn" data-category="geography">Geography</button>
                     <button class="category-btn" data-category="sports">Sports</button>
+                    <button class="category-btn" data-category="sports">Entertainment</button>
                 </div>
             </div>
             <div id="difficulty-screen" class="screen hidden">
