--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                     <button id="change-difficulty-btn">Change Difficulty</button>
                 </div>
             </div>
+            <p class="emoji">Made with ❤️ by <a class="li" href="http://ayush-devspace5.web.app"target="_blank">Ayush Devspace</a></p>
         </div>
     </div>
     <script src="script.js"></script>
