--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Quiz</title>
     <link rel="stylesheet" href="style.css">
+     <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -20,6 +23,7 @@
                     <button class="category-btn" data-category="geography">Geography</button>
                     <button class="category-btn" data-category="sports">Sports</button>
                     <button class="category-btn" data-category="entertainment">Entertainment</button>
+                    <button class="category-btn" data-category="space">Space</button>
                 </div>
             </div>
             <div id="difficulty-screen" class="screen hidden">
